syntax = "proto3";

package proto;

option go_package = "untether/proto;proto";

service RoundupService {
  rpc RoundupTransaction(RoundupRequest) returns (RoundupResponse);
}

message RoundupRequest {
  string user_id = 1;
  double transaction_amount = 2;
}

message RoundupResponse {
  string roundup_id = 1;
  double amount_rounded = 2;
}
